--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,6 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains,eclipse
+
+
+/src/azul/view/game/
